25
- Update Python dependencies
- Update boost to 1.66.0
- Update libtorrent-rasterbar to 1.1.6
- Use own libtorrent-rasterbar

24
- Add port to settings
- Fix nice
- Rework Python

23
- Simplify PYTHONPATH

22
- Rebuild

21
- Update dependencies

20
- Update Python dependencies

19
- Update libtorrent-rasterbar to 1.1.4

18
- Rebuild

17
- Fix priority setting

16
- Fix priority setting

15
- Add priority setting

14
- Fix description

13
- Update to 1.3.15

12
- Update libtorrent-rasterbar to 1.1.3
- Update Python dependencies

11
- Revert to 1.3.14 and apply only necessary patches

10
- Update to 08c03d7

9
- Update libtorrent-rasterbar to 1.1.2

8
- Update to 1.3.14
- Update Python dependencies

7
- Update libtorrent-rasterbar to 1.0.11

6
- Service after/requires multi-user.target network-online.target

5
- Enable start daemon button
- Wait for DNS

4
- Remove strip_lto

3
- Update Python dependencies

2
- Rebuild

1
- Initial add-on